--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -470,11 +470,7 @@ jobs:
       - name: Install Octopus CLI
         run: |
           # Get the latest release version
-          OCTOPUS_CLI_VERSION=$(curl -s https://api.github.com/repos/OctopusDeploy/cli/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-          echo "Installing Octopus CLI version: $OCTOPUS_CLI_VERSION"
-          curl -L "https://github.com/OctopusDeploy/cli/releases/download/${OCTOPUS_CLI_VERSION}/octopus-linux-amd64" \
-            -o /usr/local/bin/octopus \
-            && chmod +x /usr/local/bin/octopus
+          curl -L https://github.com/OctopusDeploy/cli/raw/main/scripts/install.sh | bash
           octopus version
 
       # Configure Octopus CLI with API key and server URL
