Fall back to older version of the Github actions to create and release deployments.

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -245,7 +245,6 @@ jobs:
           if ($failedCount -gt 0) {
             Write-Warning "Some packages failed to publish to Octopus Deploy."
           }
-
           
   run-acceptance-tests:
       name: Run Acceptance Tests
@@ -459,7 +458,6 @@ jobs:
       name: TDD
     
     steps:
-      # Set version environment variable
       - name: Set Version
         run: |
           version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
@@ -467,44 +465,40 @@ jobs:
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
 
+      # Using older versions of the Github Actions. This is because with @v3 it's possible to experience a 
+      # race condition:
+      #   * Github creates the release and signals Octopus deploy to start deploying the release
+      #   * Octopus Deploy will take some time deploying the release; about 2 minutes.
+      #   * In the GitHub Actions UI, the deployer can then approve and kick of the deployment to UAT.  
+      #     * If the deployer is fast enough, they can approve the deployment to UAT _before_ Octopus Deploy has finished deploying the release to TDD.
+      #     * This will cause the deployment to UAT to fail because the lifecycle requirest the release to be deployed to TDD first.
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest
+    
 
-      # https://github.com/OctopusDeploy/create-release-action
-      - name: Create Octopus Release
-        uses: OctopusDeploy/create-release-action@v3
+      - name: Create Octopus Release and deploy to TDD
+        uses: OctopusDeploy/create-release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
         with:
+          api_key: ${{ secrets.OCTO_API_KEY  }}
+          server: ${{ secrets.OCTOPUS_URL }}
+          space: '${{ vars.OCTOPUS_SPACE }}'
           project: '${{ vars.OCTOPUS_PROJECT }}'
           git_ref: ${{ (github.ref_type == 'tag' && github.event.repository.default_branch ) || (github.head_ref || github.ref) }}
           git_commit: ${{ github.event.after || github.event.pull_request.head.sha }}          
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
+          deploy_to: "TDD"
+          progress: true
+          release_number: "${{ env.BUILD_BUILDNUMBER }}"
+          deployment_timeout: 00:30:00
+          package_version: "${{ env.BUILD_BUILDNUMBER }}"
 
-      - name: Pause for the release to be created
-        run: sleep 90
   
-      # https://github.com/OctopusDeploy/deploy-release-action  
-      - name: Deploy Octopus Release to TDD
-        uses: OctopusDeploy/deploy-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
-        with:          
-          project: '${{ vars.OCTOPUS_PROJECT }}'
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
-          environments: "TDD"
-      - name: Pause for the deployment to finish.
-        run: sleep 180
+
   deploy-to-uat:
     name: Deploy to UAT 
     needs: [deploy-to-tdd]
@@ -521,63 +515,77 @@ jobs:
           echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
-
-
-      # https://github.com/OctopusDeploy/deploy-release-action  
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest
+      
+      # Using older versions of the Github Actions. This is because with @v3 it's possible to experience a 
+      # race condition:
+      #   * Github creates the release and signals Octopus deploy to start deploying the release
+      #   * Octopus Deploy will take some time deploying the release; about 2 minutes.
+      #   * In the GitHub Actions UI, the deployer can then approve and kick of the deployment to UAT.  
+      #     * If the deployer is fast enough, they can approve the deployment to UAT _before_ Octopus Deploy has finished deploying the release to TDD.
+      #     * This will cause the deployment to UAT to fail because the lifecycle requirest the release to be deployed to TDD first.
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest  
       - name: Deploy Octopus Release to UAT
-        uses: OctopusDeploy/deploy-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
-        with:          
-          project: '${{ vars.OCTOPUS_PROJECT }}'
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
-          environments: "UAT"
-
-      - name: Pause for the deployment to finish.
-        run: sleep 180
- 
+        id: deploy-to-uat
+        uses: dmarttinen/deploy-release-action@v0.3.0
+        with:
+          api_key: ${{ secrets.OCTO_API_KEY  }}
+          server: ${{ secrets.OCTOPUS_URL }}
+          space: ${{ vars.OCTOPUS_SPACE }}       
+          project: ${{ vars.OCTOPUS_PROJECT }}   
+          deploy_to: "UAT"   
+          progress: true 
+          release_number: ${{env.BUILD_BUILDNUMBER}}
+          timeout: 00:30:00
+          
 
   deploy-to-prod:
-    name: Deploy to Prod
+    name: Deploy to prod 
     needs: [deploy-to-uat]
     if: success() 
     runs-on: ubuntu-latest
     environment:
-      name: Prod
+      name: UAT
     
     steps:
       # Set version environment variable
-
       - name: Set Version
         run: |
           version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
           echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
-
-
-      # https://github.com/OctopusDeploy/deploy-release-action  
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest
+          
+      # Using older versions of the Github Actions. This is because with @v3 it's possible to experience a 
+      # race condition:
+      #   * Github creates the release and signals Octopus deploy to start deploying the release
+      #   * Octopus Deploy will take some time deploying the release; about 2 minutes.
+      #   * In the GitHub Actions UI, the deployer can then approve and kick of the deployment to UAT.  
+      #     * If the deployer is fast enough, they can approve the deployment to UAT _before_ Octopus Deploy has finished deploying the release to TDD.
+      #     * This will cause the deployment to UAT to fail because the lifecycle requirest the release to be deployed to TDD first.
+      - name: Install Octopus CLI
+        uses: OctopusDeploy/install-octopus-cli-action@v1
+        with:
+          version: latest
       - name: Deploy Octopus Release to Prod
-        uses: OctopusDeploy/deploy-release-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          BUILD_BUILDNUMBER: ${{ env.VERSION }}
-          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
-          OCTOPUS_SPACE: '${{ vars.OCTOPUS_SPACE }}'
-          OCTOPUS_PROJECT: '${{ vars.OCTOPUS_PROJECT }}'
-        with:          
-          project: '${{ vars.OCTOPUS_PROJECT }}'
-          release_number: "${{ env.BUILD_BUILDNUMBER }}" # or whatever version you used
-          environments: "Prod"
-
-      - name: Pause for the deployment to finish.
-        run: sleep 180
-  
+        id: deploy-to-uat
+        uses: dmarttinen/deploy-release-action@v0.3.0
+        with:
+          api_key: ${{ secrets.OCTO_API_KEY  }}
+          server: ${{ secrets.OCTOPUS_URL }}
+          space: ${{ vars.OCTOPUS_SPACE }}       
+          project: ${{ vars.OCTOPUS_PROJECT }}   
+          deploy_to: "Prod"   
+          progress: true 
+          release_number: ${{env.BUILD_BUILDNUMBER}}
+          timeout: 00:30:00
